--- a/Brainstorm_dump/story/story_files/Text Adventures of Argothon.html
+++ b/Brainstorm_dump/story/story_files/Text Adventures of Argothon.html
@@ -12,22 +12,22 @@
 <tw-storydata name="Text Adventures of Argothon" startnode="10" creator="Twine" creator-version="2.10.0" format="Harlowe" format-version="3.3.9" ifid="F178878C-385A-42DE-8889-5F82751CEA46" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="&#39;Have a day&#39;" tags="" position="575,675" size="100,100">Alright.  Morning: tough.  Side of the bed: Wrong.  Day:  Having a.
 
 [[Finish getting ready and eat some breakfast]]
-/* rawContent */background: house_present, onLoad:{ func:find, params: &quot;a day&quot;}</tw-passagedata><tw-passagedata pid="2" name="Fidget for a moment, putting off the tasks of the day" tags="" position="850,1525" size="100,100">You arrange your desk, half convincing yourself you&#39;ll be more productive if everything is just so.  You haven&#39;t been productive in years.  So when the building shudders slightly, as though a truck was rumbling past your 13th story window, you notice immediately.  Maybe a quick phonecall down to ops to see if they want your in person input.  The phone rings twice before the building, and reality itself, fall apart in a [[Temporal Storm]].
+/* rawContent */background: house_present, onLoad:{ func:find, params: &quot;a day&quot;}</tw-passagedata><tw-passagedata pid="2" name="Fidget for a moment, putting off the tasks of the day" tags="" position="650,1525" size="100,100">You arrange your desk, half convincing yourself you&#39;ll be more productive if everything is just so.  You haven&#39;t been productive in years.  So when the building shudders slightly, as though a truck was rumbling past your 13th story window, you notice immediately.  Maybe a quick phonecall down to ops to see if they want your in person input.  The phone rings twice before the building, and reality itself, fall apart in a [[Temporal Storm]].
 
 /* rawContent */background: office_present</tw-passagedata><tw-passagedata pid="3" name="Finish getting ready and eat some breakfast" tags="" position="700,800" size="100,100">You fuel your day, not really paying attention to your nourishment, just mindlessly consuming your morning&#39;s energy.  You gulp down a few good mouthfuls of bad coffee and [[head to work.]]
 /* rawContent */background: house_present</tw-passagedata><tw-passagedata pid="4" name="Focus on getting to the days work." tags="" position="1125,775" size="100,100">[[Press 13]]
 /* rawContent */background: elevator_present,onLoad:{func: applyElevatorEffectsToBus,params:(global.musicBus)},</tw-passagedata><tw-passagedata pid="5" name="Go back to bed" tags="" position="700,425" size="100,100">You roll over, fold your pillow in half, hunker under your blanket, and try to recapture the magic of unconciousness.  Your fear begins to rise as you breathe slowly for an eternal five minutes, but you realize your thoughts are wandering.  You dream of a party you never attended.  Unfamiliar faces loom in and out of shadow, costumed waitstaff bringing drinks or food depending on when you look at them.  A celebra-- JANGLEJANGLEJANGLEDING.  JANGLEJANGLEJANGLEDING.
 
 [[Your alarm wakes you]]
-/* rawContent */background: house_present</tw-passagedata><tw-passagedata pid="6" name="Grab a banana" tags="" position="450,1100" size="100,100">This will bring a longing no food could fill closer to comfort.  You make a mental note to wrap the banana&#39;s peel in newspaper before throwing it out.  Your keen nose will be distracted all day if you don&#39;t. Take your banana back to the elevator and ...
+/* rawContent */background: house_present</tw-passagedata><tw-passagedata pid="6" name="Grab a banana" tags="" position="575,1075" size="100,100">This will bring a longing no food could fill closer to comfort.  You make a mental note to wrap the banana&#39;s peel in newspaper before throwing it out.  Your keen nose will be distracted all day if you don&#39;t. Take your banana back to the elevator and ...
 
 [[Press R]]
 [[Press 13]]
-/* rawContent */background: office_present,  onLoad: {func: find, params: [&quot;banana&quot;]}</tw-passagedata><tw-passagedata pid="7" name="Grab a gooey cinnamon bun" tags="" position="725,1075" size="100,100">This treat will hserve as external courage to face the day&#39;s work tasks.  You silently thank yourself for the private washroom in your new offices as you notice the small package smearing sugary deliciousness on your pinkie.  Stepping back into the empty elevator, you ... 
+/* rawContent */background: office_present,  find: &quot;banana&quot;}</tw-passagedata><tw-passagedata pid="7" name="Grab a gooey cinnamon bun" tags="" position="725,1075" size="100,100">This treat will hserve as external courage to face the day&#39;s work tasks.  You silently thank yourself for the private washroom in your new offices as you notice the small package smearing sugary deliciousness on your pinkie.  Stepping back into the empty elevator, you ... 
 
 [[Head to the roof]]
 [[Head to your offices]]
-/* rawContent */background: office_present,  onLoad: {func: find, params: [&quot;cinnamonBun&quot;]}</tw-passagedata><tw-passagedata pid="8" name="Immediately get to work" tags="" position="725,1525" size="100,100">You open your email and sigh deeply.  You used to be an inspired researcher.  Now you&#39;re just the top of a beuraucratic heap.  Highest view from a mountain of dirt.  You connect people who need to connect.  You give your vision of what direction the organization should take.
+/* rawContent */background: office_present,  find:&quot;cinnamonBun&quot;}</tw-passagedata><tw-passagedata pid="8" name="Immediately get to work" tags="" position="525,1525" size="100,100">You open your email and sigh deeply.  You used to be an inspired researcher.  Now you&#39;re just the top of a beuraucratic heap.  Highest view from a mountain of dirt.  You connect people who need to connect.  You give your vision of what direction the organization should take.
 You nearly sigh with relief when you&#39;re suddenly torn apart by an afternoon [[Temporal Storm]].
 
 /* rawContent */background: office_present</tw-passagedata><tw-passagedata pid="9" name="Investigate the shiny object you notice out of the corner of your eye?" tags="" position="1125,1150" size="100,100">You pause for a moment, happy for an excuse to put off the day&#39;s work.  You reach down for the scuffed metal object, notice it&#39;s a large brass key.  The antique object is worn to brushed shininess in two places.  The part where...  Is it suddenly really warm?  The part where it would be held, and the whatever, the the the thing the blade of the key is old timey and why is it hard to see and think of word for th wher
@@ -57,7 +57,7 @@ It&#39;s too early.
 [[Take a hot shower]]
 
 [[Take a cold shower]]
-/* rawContent */background: house_present</tw-passagedata><tw-passagedata pid="16" name="Temporal Storm" tags="" position="725,1650" size="100,100">Reality seems to fold in on itself around you.
+/* rawContent */background: house_present</tw-passagedata><tw-passagedata pid="16" name="Temporal Storm" tags="" position="525,1650" size="100,100">Reality seems to fold in on itself around you.
 
 You try to scream but no sound emerges. Your body feels simultaneously compressed and stretched, as if every cell is suddenly being pulled in every direction.
 
@@ -91,11 +91,59 @@ You towel off and sit on the bed, relaxing for just a moment... stretching out f
 /* rawContent */background: house_present, onLoad:{func: find, params:[&quot;resolve&quot;]}</tw-passagedata><tw-passagedata pid="23" name="Take a cold shower" tags="" position="975,325" size="100,100">Battle the your demons
 
 [[Take a cold shower, continued]]
-/* rawContent */background: house_present, onLoad:{func: fight, params: &quot;coldDemons&#39;}</tw-passagedata><tw-passagedata pid="24" name="Head to your offices" tags="" position="925,1075" size="100,100">[[Press 13]] 
+/* rawContent */background: house_present, onLoad:{func: fight, params: &quot;coldDemons&#39;}</tw-passagedata><tw-passagedata pid="24" name="Head to your offices" tags="" position="875,1075" size="100,100">[[Press 13]] 
 
-/* rawContent */background: office_present, onLoad:{func: addElevatorEffectsToBus,params:(global.musicBus)},</tw-passagedata><tw-passagedata pid="25" name="Untitled Passage" tags="" position="1050,650" size="100,100">onLoad:{func: removeElevatorEffectsFromBus,params:(global.musicBus)},
+/* rawContent */background: office_present, onLoad:{func: addElevatorEffectsToBus,params:(global.musicBus)},</tw-passagedata><tw-passagedata pid="25" name="Untitled Passage" tags="" position="1075,650" size="100,100">onLoad:{func: removeElevatorEffectsFromBus,params:(global.musicBus)},
 
-onLoad:{func: applyElevatorEffectsToBus,params:(global.musicBus)},</tw-passagedata><tw-passagedata pid="26" name="Pass out" tags="" position="1125,1275" size="100,100"></tw-passagedata></tw-storydata>
+onLoad:{func: applyElevatorEffectsToBus,params:(global.musicBus)},</tw-passagedata><tw-passagedata pid="26" name="Pass out" tags="" position="1125,1275" size="100,100">Your thoughts swirl half formed.  Maybe you hear shouting.  Maybe it&#39;s your mind trying to make sense of the rushing sound in your ears on the edge of intelligibility.  You think of faces half seen during your day.  The roar gets louder and you find yourself face to face with mischevious and adventurous [[William Redbrook]],
+
+Careful and curious [[Nicholas Drayton]], or
+
+Earnest and wise [[Margaret Ashford]]
+
+/* rawContent */background: spr_background, find: &quot;key&quot;</tw-passagedata><tw-passagedata pid="27" name="William Redbrook" tags="" position="1000,1475" size="100,100">&quot;And who are you?&quot;
+A smirking voice opens your eyes, and you&#39;re faced with a stranger.
+You look around and realize, not only is the person you&#39;re looking at a complete unknown,  but your very surroundings are unfamiliar. Is this some kind of film set? Wooden fixtures decorate a cozy, homey, --WAIT! what the heck is going on!
+
+[[Ask questions]]
+
+[[Run Away!]]
+
+/* rawContent */background: house_past, character: WB_past_smile, onLoad: {addFriend: [&quot;William&quot;]}</tw-passagedata><tw-passagedata pid="28" name="Nicholas Drayton" tags="" position="1125,1400" size="100,100"></tw-passagedata><tw-passagedata pid="29" name="Margaret Ashford" tags="" position="1250,1400" size="100,100"></tw-passagedata><tw-passagedata pid="30" name="Ask questions" tags="" position="950,1250" size="100,100">You ask your ersatz host five questions at the same time, but all that surfaces is a hoarsely muttered &quot;gruuhhhmuhhh.&quot; --&quot;Here, strange being.  You look parched.&quot; --The owner of the smirking voice hands you a glass of water and you gulp it down with as much dignity as you can muster.  It&#39;s not much.
+
+[[&quot;Where am I?&quot;]]
+
+[[&quot;Who are you?&quot;]]
+
+/* rawContent */character: WB_past_smile, background: house_past</tw-passagedata><tw-passagedata pid="31" name="Run Away!" tags="" position="1175,1600" size="100,100">You dash, screaming with indignity, and find yourself in a busy street.  A horse attempts to avoid your sudden appearance, but swerving only serves to topple a carriage on top of you.  The horse is fine.  You, however...
+
+You die as you lived.  Utterly accidentally.
+
+/* rawContent */background: past_street, onLoad: {theEnd: [&quot;sad&quot;]}</tw-passagedata><tw-passagedata pid="32" name="&quot;Where am I?&quot;" tags="" position="550,1375" size="100,100">&quot;You sit &#39;pon the floor, stranger.  The floor of a modest home in Southwark.  Southwark being a dot on a map of England.  England being a nation in the temporal world, and the temporal world being a location you must yourself interpret the nature of.  I find your accent unplaceable, and I, being a listener by virtue and trade, am implaccable when it comes to the unexpected and the new.  Of which you number both.  I am Redbrook, called William.  Enrobe thyself and I shall impose you upon my brothers, who shall upbraid me for being untimely anon.&quot;
+
+[[Run Away!]] 
+
+[[&quot;Who are you?&quot;]]
+
+[[Put on a few layers of wool and follow him to adventure]]
+
+/* rawContent */character: WB_past_smile, background: house_past
+</tw-passagedata><tw-passagedata pid="33" name="&quot;Who are you?&quot;" tags="" position="900,1375" size="100,100">&quot;Forgive my boldness in ignoring your question... You seem to have wandered into my home, and what a curiosity hath struck me as I noticed your form owns a familiar echo to the beginnings of adventure.  Let us tarry not.  Don this costume and William Redbrook shall visit you upon my brothers.&quot;
+
+[[Run Away!]] 
+
+[[&quot;Where am I?&quot;]] 
+
+[[Put on a few layers of wool and follow him to adventure]]
+
+/* rawContent */character: WB_past_neutral, background: house_past
+</tw-passagedata><tw-passagedata pid="34" name="Put on a few layers of wool and follow him to adventure" tags="" position="650,1675" size="100,100">Your new ... friend? introduces himself as Redbrook, called William.  He brings you to a theater where you are introduced with much more dignity and ettiquete to a band of actors.  You find yourself put at ease, lulled by their strange accents into a relaxed state.  After their day&#39;s rehearsal for some new theatrical work of locally existential importance, your thoughts turn to returning ... somewhere?
+
+Over the years the past fades utterly.  You die painfully but quickly a few years after the love of your life.  A life obscured by time and forgotten by everything but decay.
+
+Not bad.
+
+/* rawContent */ background: street_past, onLoad: {theEnd: [&quot;neutral&quot;]}</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
