--- a/Brainstorm_dump/story/story_files/Text Adventures of Argothon.html
+++ b/Brainstorm_dump/story/story_files/Text Adventures of Argothon.html
@@ -105,7 +105,7 @@ Over the years the past fades utterly.  You die painfully but quickly a few year
 
 Not bad.
 
-/* rawContent */ background: street_past, onLoad: {theEnd: [&quot;neutral&quot;]}</tw-passagedata><tw-passagedata pid="23" name="Run Away!" tags="" position="1400,1900" size="100,100">You dash, screaming with indignity, and find yourself in a busy street.  A horse attempts to avoid your sudden appearance, but swerving only serves to topple a carriage on top of you.  The horse is fine.  You, however...
+/* rawContent */ background: street_past, onLoad: {theEnd: [&quot;neutral&quot;]}</tw-passagedata><tw-passagedata pid="23" name="Run Away!" tags="" position="1425,1900" size="100,100">You dash, screaming with indignity, and find yourself in a busy street.  A horse attempts to avoid your sudden appearance, but swerving only serves to topple a carriage on top of you.  The horse is fine.  You, however...
 
 You die as you lived.  Utterly accidentally.
 
@@ -298,7 +298,7 @@ Another moment passes.  For someone so impatient for you to make sense, your hos
 
 /* rawContent */character: ND_past_smile, background: house_past</tw-passagedata><tw-passagedata pid="59" name="&quot;Just tell me what the heck is going on!&quot;" tags="" position="2100,1125" size="100,100">The tinkering stops.  The tinkerer looks at you.
 
-&quot;You&#39;re mad.&quot;
+&quot;You&#39;re angry.&quot;
 
 [[&quot;Yes!&quot;]]
 
