--- a/Brainstorm_dump/story/story_files/Text Adventures of Argothon.html
+++ b/Brainstorm_dump/story/story_files/Text Adventures of Argothon.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Text Adventures of Argothon.</tw-noscript></noscript></tw-story>
-<tw-storydata name="Text Adventures of Argothon" startnode="15" creator="Twine" creator-version="2.10.0" format="Harlowe" format-version="3.3.9" ifid="F178878C-385A-42DE-8889-5F82751CEA46" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="&quot;Where am I?&quot;" tags="" position="1000,1575" size="100,100">&quot;You sit &#39;pon the floor, stranger.  The floor of a modest home in Southwark.  Southwark being a dot on a map of England.  England being a nation in the temporal world, and the temporal world being a location you must yourself interpret the nature of.  I find your accent unplaceable, and I, being a listener by virtue and trade, am implaccable when it comes to the unexpected and the new.  Of which you number both.  I am Redbrook, called William.  Enrobe thyself and I shall impose you upon my brothers, who shall upbraid me for being untimely anon.&quot;
+<tw-storydata name="Text Adventures of Argothon" startnode="64" creator="Twine" creator-version="2.10.0" format="Harlowe" format-version="3.3.9" ifid="F178878C-385A-42DE-8889-5F82751CEA46" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="&quot;Where am I?&quot;" tags="" position="1000,1575" size="100,100">&quot;You sit &#39;pon the floor, stranger.  The floor of a modest home in Southwark.  Southwark being a dot on a map of England.  England being a nation in the temporal world, and the temporal world being a location you must yourself interpret the nature of.  I find your accent unplaceable, and I, being a listener by virtue and trade, am implaccable when it comes to the unexpected and the new.  Of which you number both.  I am Redbrook, called William.  Enrobe thyself and I shall impose you upon my brothers, who shall upbraid me for being untimely anon.&quot;
 
 [[Run Away!]] 
 
@@ -61,14 +61,12 @@ You nearly sigh with relief when you&#39;re suddenly torn apart by an afternoon 
 /* rawContent */background: office_present</tw-passagedata><tw-passagedata pid="14" name="Investigate the shiny object you notice out of the corner of your eye?" tags="" position="1150,1050" size="100,100">You pause for a moment, happy for an excuse to put off the day&#39;s work.  You reach down for the scuffed metal object, notice it&#39;s a large brass key.  The antique object is worn to brushed shininess in two places.  The part where...  Is it suddenly really warm?  The part where it would be held, and the whatever, the the the thing the blade of the key is old timey and why is it hard to see and think of word for th wher
 
 [[Pass out]]
-/* rawContent */background: outside_present</tw-passagedata><tw-passagedata pid="15" name="It&#39;s too early." tags="" position="700,300" size="100,100">The palm trees abruptly dim.
-
-It&#39;s too early. It&#39;s dark and it&#39;s quiet and it&#39;s warm but it&#39;s too early. Your muffled thoughts slowly resolve themselves into enough clarity to question how long you have left... before your alarm.
+/* rawContent */background: outside_present</tw-passagedata><tw-passagedata pid="15" name="It&#39;s too early." tags="" position="700,300" size="100,100">It&#39;s too early. It&#39;s dark and it&#39;s quiet and it&#39;s warm but it&#39;s too early. Your muffled thoughts slowly resolve themselves into enough clarity to question how long you have left... before your alarm.
 Too long.
 It&#39;s too early.
 [[Go back to bed]]
 [[Take advantage of the extra... ugh... hour.]]
-/* rawContent */background: spr_background, onLoad:{func: function test(_str){show_debug_message(_str)}, [&quot;test&quot;]}</tw-passagedata><tw-passagedata pid="16" name="Margaret Ashford" tags="" position="1375,625" size="100,100"></tw-passagedata><tw-passagedata pid="17" name="Nicholas Drayton" tags="" position="1300,1050" size="100,100">&quot;Wake up then.  We haven&#39;t got all the time in the world.  Yet.&quot;
+/* rawContent */background: house_present, onLoad:{func: function test(_str){show_debug_message(_str)}, [&quot;test&quot;]}</tw-passagedata><tw-passagedata pid="16" name="Margaret Ashford" tags="" position="1375,625" size="100,100"></tw-passagedata><tw-passagedata pid="17" name="Nicholas Drayton" tags="" position="1300,1050" size="100,100">&quot;Wake up then.  We haven&#39;t got all the time in the world.  Yet.&quot;
 You blearily open half an eyelid and percieve a frustrated sideways person.
 
 You sit up.
@@ -131,7 +129,7 @@ You towel off and sit on the bed, relaxing for just a moment... stretching out f
 
 You try to scream but no sound emerges. Your body feels simultaneously compressed and stretched, as if every cell is suddenly being pulled in every direction.
 
-Through the haze of agony, you catch glimpses—London streets, your office, places you&#39;ve never seen—all superimposed like multiple exposures on a single photograph.
+Through the haze of agony, you catch glimpses... London streets, your office, places you&#39;ve never seen... all superimposed like multiple exposures on a single photograph.
 
 With terrible clarity, you realize you&#39;re being pulled apart across time itself.
 
@@ -222,7 +220,7 @@ These self congratulatory thoughts ripple through existence as you enter the [[T
 
 /* rawContent */background: office_present, onLoad:{func: addElevatorEffectsToBus,params:(global.musicBus)}</tw-passagedata><tw-passagedata pid="45" name="Take the stairs" tags="" position="350,1400" size="100,100">You... take the... stairs?  You&#39;re in an incredible hurry, so you breeze past the opening elevator doors to take... the stairs.  You make it a floor and a half before everyone (like Everyone everyone) dies in a [[Temporal Storm]].</tw-passagedata><tw-passagedata pid="46" name="Press B" tags="" position="200,1425" size="100,100">The elevator dings down a few floors.  The muzak plays softly.  You pick a piece of lint from your sleeve.  All of existence is torn by the relentless eddies of a [[Temporal Storm]]
 
-/* rawContent */background: office_present,onLoad:{func: removeElevatorEffectsFromBus,params:(global.musicBus)}</tw-passagedata><tw-passagedata pid="47" name="Untitled Passage 1" tags="" position="300,1000" size="100,100">You shake in your chair with a start.  Time travel feels an awful lot like a dream.  But there&#39;s the key on your desk in front of you.  Slightly embedded, actually.  As though key and desk had fought for the same spacial coordinates and compromised.  It sticks slightly, but pulls free.  The desk is terribly damaged, but the key itself is only slightly discolored.  Your computer blinks with an unanswered notification.  The window shows a sunny day, cloudless day, though somehow more dim than usual.
+/* rawContent */background: office_present,onLoad:{func: removeElevatorEffectsFromBus,params:(global.musicBus)}</tw-passagedata><tw-passagedata pid="47" name="Untitled Passage 1" tags="" position="0,650" size="100,100">You shake in your chair with a start.  Time travel feels an awful lot like a dream.  But there&#39;s the key on your desk in front of you.  Slightly embedded, actually.  As though key and desk had fought for the same spacial coordinates and compromised.  It sticks slightly, but pulls free.  The desk is terribly damaged, but the key itself is only slightly discolored.  Your computer blinks with an unanswered notification.  The window shows a sunny day, cloudless day, though somehow more dim than usual.
 
 [[Check the notification details]]
 [[Focus on getting to the days work.]] 
@@ -320,7 +318,14 @@ They turn, take a small bag from the wall, open door to the stinging sunlight, a
 
 
 
-/* rawContent */character: ND_past_neutral, background: house_past, addFriend:&quot;Nicholas&quot;</tw-passagedata></tw-storydata>
+/* rawContent */character: ND_past_neutral, background: house_past, addFriend:&quot;Nicholas&quot;</tw-passagedata><tw-passagedata pid="63" name="..." tags="" position="600,150" size="100,100">The palm trees abruptly dim.
+
+[[It&#39;s too early.]]
+/* rawContent */background: spr_background</tw-passagedata><tw-passagedata pid="64" name="The Beginning" tags="" position="425,150" size="100,100">...hm?
+...
+
+[[...]]
+/* rawContent */background: spr_background</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
