--- a/Brainstorm_dump/story/story_files/Text Adventures of Argothon.html
+++ b/Brainstorm_dump/story/story_files/Text Adventures of Argothon.html
@@ -66,7 +66,13 @@ Too long.
 It&#39;s too early.
 [[Go back to bed]]
 [[Take advantage of the extra... ugh... hour.]]
-/* rawContent */background: house_present, onLoad:{func: function test(_str){show_debug_message(_str)}, [&quot;test&quot;]}</tw-passagedata><tw-passagedata pid="16" name="Margaret Ashford" tags="" position="1375,625" size="100,100"></tw-passagedata><tw-passagedata pid="17" name="Nicholas Drayton" tags="" position="1300,1050" size="100,100">&quot;Wake up then.  We haven&#39;t got all the time in the world.  Yet.&quot;
+/* rawContent */background: house_present, onLoad:{func: function test(_str){show_debug_message(_str)}, [&quot;test&quot;]}</tw-passagedata><tw-passagedata pid="16" name="Margaret Ashford" tags="" position="1400,600" size="100,100">&quot;What is it now?!&quot;
+You hear someone bounding down a very old, no, very new? hmm.  a staircase.
+You open your eyes to behold the form of a dsiquietingly familiar stranger.  The look you up and down... Well, they look your supine form left and right, and begin to ask you questions for the rest of your time together.
+&quot;What is the last thing you remember?&quot;
+
+[[&quot;There was a weird brass ke... Wait!  Who are you!?]]
+[[Run Away!]]</tw-passagedata><tw-passagedata pid="17" name="Nicholas Drayton" tags="" position="1300,1050" size="100,100">&quot;Wake up then.  We haven&#39;t got all the time in the world.  Yet.&quot;
 You blearily open half an eyelid and percieve a frustrated sideways person.
 
 You sit up.
@@ -83,9 +89,9 @@ You recognize the clothing as very old, and the wearer as a tall lanky teenager.
 
 /* rawContent */character: ND_past_neutral, background: house_past</tw-passagedata><tw-passagedata pid="18" name="Pass out" tags="" position="1150,1150" size="100,100">Your thoughts swirl half formed.  Maybe you hear shouting.  Maybe it&#39;s your mind trying to make sense of the rushing sound in your ears on the edge of intelligibility.  You think of faces half seen during your day.  The roar gets louder and you find yourself face to face with mischevious and adventurous [[William Redbrook]],
 
-Careful and curious [[Nicholas Drayton]], or
+careful and curious [[Nicholas Drayton]], or
 
-Earnest and wise [[Margaret Ashford]]
+earnest and wise [[Margaret Ashford]]
 
 /* rawContent */background: spr_background, find: &quot;key&quot;</tw-passagedata><tw-passagedata pid="19" name="Press 13" tags="" position="1150,925" size="100,100">You press the button marked 13, and head to your personal offices.  Hoping to catch up on some paperwork, you continue through the offensive smell of carpet adhesive and sit behind your desk.
 [[Immediately get to work]]
@@ -220,7 +226,7 @@ These self congratulatory thoughts ripple through existence as you enter the [[T
 
 /* rawContent */background: office_present, onLoad:{func: addElevatorEffectsToBus,params:(global.musicBus)}</tw-passagedata><tw-passagedata pid="45" name="Take the stairs" tags="" position="350,1400" size="100,100">You... take the... stairs?  You&#39;re in an incredible hurry, so you breeze past the opening elevator doors to take... the stairs.  You make it a floor and a half before everyone (like Everyone everyone) dies in a [[Temporal Storm]].</tw-passagedata><tw-passagedata pid="46" name="Press B" tags="" position="200,1425" size="100,100">The elevator dings down a few floors.  The muzak plays softly.  You pick a piece of lint from your sleeve.  All of existence is torn by the relentless eddies of a [[Temporal Storm]]
 
-/* rawContent */background: office_present,onLoad:{func: removeElevatorEffectsFromBus,params:(global.musicBus)}</tw-passagedata><tw-passagedata pid="47" name="Untitled Passage 1" tags="" position="0,650" size="100,100">You shake in your chair with a start.  Time travel feels an awful lot like a dream.  But there&#39;s the key on your desk in front of you.  Slightly embedded, actually.  As though key and desk had fought for the same spacial coordinates and compromised.  It sticks slightly, but pulls free.  The desk is terribly damaged, but the key itself is only slightly discolored.  Your computer blinks with an unanswered notification.  The window shows a sunny day, cloudless day, though somehow more dim than usual.
+/* rawContent */background: office_present,onLoad:{func: removeElevatorEffectsFromBus,params:(global.musicBus)}</tw-passagedata><tw-passagedata pid="47" name="Untitled Passage 1" tags="" position="225,825" size="100,100">You shake in your chair with a start.  Time travel feels an awful lot like a dream.  But there&#39;s the key on your desk in front of you.  Slightly embedded, actually.  As though key and desk had fought for the same spacial coordinates and compromised.  It sticks slightly, but pulls free.  The desk is terribly damaged, but the key itself is only slightly discolored.  Your computer blinks with an unanswered notification.  The window shows a sunny day, cloudless day, though somehow more dim than usual.
 
 [[Check the notification details]]
 [[Focus on getting to the days work.]] 
@@ -282,19 +288,19 @@ Another moment passes.  For someone so impatient for you to make sense, your hos
 [[&quot;Please tell me what I&#39;m supposed to do.&quot;]]
 [[Run Away!]]
 
-/* rawContent */character: ND_past_smile, background: house_past</tw-passagedata><tw-passagedata pid="57" name="&quot;Please tell me what I&#39;m supposed to do.&quot;" tags="" position="2050,1325" size="100,100">&quot;You are supposed to come here, now, moved by the weaving of unseeing uncaring hands.  You are supposed to bring a device back to me...  It is very hard to explain these things.  I make.  I don&#39;t explain.  I just make things from things and the things do things, and most people suffer a little and love a lot and that&#39;s okay and...&quot;
+/* rawContent */character: ND_past_smile, background: house_past</tw-passagedata><tw-passagedata pid="57" name="&quot;Please tell me what I&#39;m supposed to do.&quot;" tags="" position="2000,1200" size="100,100">&quot;You are supposed to come here, now, moved by the weaving of unseeing uncaring hands.  You are supposed to bring a device back to me...  It is very hard to explain these things.  I make.  I don&#39;t explain.  I just make things from things and the things do things, and most people suffer a little and love a lot and that&#39;s okay and...&quot;
 
 [[&quot;I&#39;m sorry.  It sounds like this is difficult for you.  Please.  I just want to make things good.&quot;]]
 
 [[&quot;Just tell me what the heck is going on!&quot;]]
 
-/* rawContent */character: ND_past_neutral, background: house_past</tw-passagedata><tw-passagedata pid="58" name="&quot;I&#39;m sorry.  It sounds like this is difficult for you.  Please.  I just want to make things good.&quot;" tags="" position="2200,1275" size="100,100">This gets you brief but scouring eye contact.  Your host cracks a small smile.
+/* rawContent */character: ND_past_neutral, background: house_past</tw-passagedata><tw-passagedata pid="58" name="&quot;I&#39;m sorry.  It sounds like this is difficult for you.  Please.  I just want to make things good.&quot;" tags="" position="2100,1200" size="100,100">This gets you brief but scouring eye contact.  Your host cracks a small smile.
 
 &quot;I&#39;ll help you more than make things good.  Together let&#39;s make good things.  Follow me please.&quot;
 
 [[Follow]]
 
-/* rawContent */character: ND_past_smile, background: house_past</tw-passagedata><tw-passagedata pid="59" name="&quot;Just tell me what the heck is going on!&quot;" tags="" position="2100,1125" size="100,100">The tinkering stops.  The tinkerer looks at you.
+/* rawContent */character: ND_past_smile, background: house_past</tw-passagedata><tw-passagedata pid="59" name="&quot;Just tell me what the heck is going on!&quot;" tags="" position="2000,1100" size="100,100">The tinkering stops.  The tinkerer looks at you.
 
 &quot;You&#39;re angry.&quot;
 
@@ -302,16 +308,14 @@ Another moment passes.  For someone so impatient for you to make sense, your hos
 
 [[&quot;Scared.&quot;]]
 
-/* rawContent */character: ND_past_neutral, background: house_past</tw-passagedata><tw-passagedata pid="60" name="&quot;Yes!&quot;" tags="" position="2225,950" size="100,100">&quot;That&#39;s okay.  You can be mad.  You still have to help and hurt and live and love.  But you can be mad while you do it.  Sometimes that helps.&quot;
+/* rawContent */character: ND_past_neutral, background: house_past</tw-passagedata><tw-passagedata pid="60" name="&quot;Yes!&quot;" tags="" position="2100,1000" size="100,100">&quot;That&#39;s okay.  You can be mad.  You still have to help and hurt and live and love.  But you can be mad while you do it.  Sometimes that helps.&quot;
 
 They turn, take a small bag from the wall, open door to the stinging sunlight, and step out.
 
 [[Follow]]
 [[Run Away!]]
 
-/* rawContent */character: ND_past_neutral, background: house_past</tw-passagedata><tw-passagedata pid="61" name="&quot;Scared.&quot;" tags="" position="2225,1125" size="100,100">&quot;Mmmm, most mad people are scared.  It&#39;s helpful to notice the scared.  You can be scared something you don&#39;t know about is hurting you, or you can be mad that you hurt.  Similar, but one is easier to build off of.&quot;
-
-&quot;So is it both?&quot;
+/* rawContent */character: ND_past_neutral, background: house_past</tw-passagedata><tw-passagedata pid="61" name="&quot;Scared.&quot;" tags="" position="2100,1100" size="100,100">&quot;Mmmm, most mad people are scared.  It&#39;s helpful to notice the scared.  You can be scared something you don&#39;t know about is hurting you, or you can be mad that you&#39;re in pain.  Similar, but one is easier to build off of.  So is it both?&quot;
 
 [[&quot;Yes!&quot;]] 
 [[Run Away!]] </tw-passagedata><tw-passagedata pid="62" name="Follow" tags="" position="2400,1300" size="100,100">&quot;Also my name is Nicholas.  Please don&#39;t call me Nick, I don&#39;t like it..&quot;
@@ -325,7 +329,39 @@ They turn, take a small bag from the wall, open door to the stinging sunlight, a
 ...
 
 [[...]]
-/* rawContent */background: spr_background</tw-passagedata></tw-storydata>
+/* rawContent */background: spr_background</tw-passagedata><tw-passagedata pid="65" name="&quot;There was a weird brass ke... Wait!  Who are you!?" tags="" position="1500,600" size="100,100">&quot;Ah yes, one of Nicholas&#39;s nets.  I&#39;m sorry it found you.  Well, I&#39;m sorry you&#39;re the sort of person that thing was likely to find.  I&#39;m called Margaret by those who deserve to address me at all.  You are a stranger, stranger than most, in a strange land, stranger than most, so I suggest you stay curious while I find out our next steps.  Now tell me.  Anything else out of the ordinary for you today?&quot;
+
+[[Well, the random little demons...]]
+[[Well, I dreamt about an island last night...]]
+[[Well, I seem to have been captured by a magical key and sent to the home of a woman who knows way more than I do...]]
+[[Run Away!]]</tw-passagedata><tw-passagedata pid="66" name="Well, the random little demons..." tags="" position="1700,475" size="100,100">&quot;Oh yes.  They slip out.  Like sentient drops of dirty water as the rag is squeezed.  Any physical symptoms?  ringing ears, vision problems, headache, strange sense of deja vu?&quot;
+
+[[None that I can think of.]]
+[[A slight headache.]]
+[[Actually, I feel better than I have in years.]]</tw-passagedata><tw-passagedata pid="67" name="Well, I dreamt about an island last night..." tags="" position="1700,725" size="100,100"></tw-passagedata><tw-passagedata pid="68" name="Well, I seem to have been captured by a magical key and sent to the home of a woman who knows way more than I do..." tags="" position="1700,600" size="100,100"></tw-passagedata><tw-passagedata pid="69" name="None that I can think of." tags="" position="1850,300" size="100,100">&quot;mhmm.  Any physical symptoms?  ringing ears, vision problems, headache, strange sense of deja vu?&quot;
+
+[[ha. ha.]]</tw-passagedata><tw-passagedata pid="70" name="ha. ha." tags="" position="2025,300" size="100,100"></tw-passagedata><tw-passagedata pid="71" name="A slight headache." tags="" position="2050,575" size="100,100">Margaret, holding no pen or paper, holds herself and holds your gaze in a way that somehow reassures you she&#39;ll remember every word you tell her and more.
+
+She hands you a wooden cup of water from a nearby pitcher and continues her... interview?
+
+</tw-passagedata><tw-passagedata pid="72" name="Actually, I feel better than I have in years." tags="" position="1850,550" size="100,100">She laughs, and it only just manages to reach her eyes.  You assess this person:  She seems intelligent.  She seems self possessed.  Above all, she has an assured sense of calm confidence surrounding her.  Though not bulging with muscle or regailing you with various sesquipedalia, you perceive that she is smart, and strong, and quite dangerous.
+
+&quot;Glad to hear. The net can sometimes jolt its passenger.  You seem to have a knack for travel by mystery.  Any allergies?  Do you take anything daily?
+
+[[No.]]
+[[I&#39;m allergic to flowers and I take a multivitamin.]]
+[[I sneeze uncontrollably when jazz music plays, and I take powdered mandrake root.]]</tw-passagedata><tw-passagedata pid="73" name="No." tags="" position="2025,425" size="100,100"></tw-passagedata><tw-passagedata pid="74" name="I&#39;m allergic to flowers and I take a multivitamin." tags="" position="1975,750" size="100,100">&quot;I see.  Anything else you think I should know?&quot;
+
+[[Are you a doctor?]]
+[[A slight headache.]]
+[[No.]]</tw-passagedata><tw-passagedata pid="75" name="I sneeze uncontrollably when jazz music plays, and I take powdered mandrake root." tags="" position="1850,800" size="100,100">She glares.
+
+[[Daily.  You know, for the anti-oxidants.]]</tw-passagedata><tw-passagedata pid="76" name="Daily.  You know, for the anti-oxidants." tags="" position="1850,925" size="100,100">&quot;You are uncooperative, I see.  Well.  I hope we have better luck soon.  Whatever soon is these days.&quot;
+
+[[She shows you the door.]]
+[[Run Away!]] </tw-passagedata><tw-passagedata pid="77" name="She shows you the door." tags="" position="1850,1050" size="100,100"></tw-passagedata><tw-passagedata pid="78" name="Are you a doctor?" tags="" position="1975,875" size="100,100">&quot;Yes.  Among other things.  Now please join me, won&#39;t you?  We will link you with those who can help you move along your way.&quot;
+
+</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
