Story is a story.  Now to mash it into the game.

--- a/Brainstorm_dump/story/story_files/Text Adventures of Argothon.html
+++ b/Brainstorm_dump/story/story_files/Text Adventures of Argothon.html
@@ -446,10 +446,49 @@ if friends with all [[Get back to work.]]</tw-passagedata><tw-passagedata pid="9
 
 [[Bring the key to the roof]]
 
-</tw-passagedata><tw-passagedata pid="95" name="Bring the key to the roof" tags="" position="1300,600" size="100,100">[[you press R]]</tw-passagedata><tw-passagedata pid="96" name="you press R" tags="" position="1300,475" size="100,100">The doors open up and you walk out, straight to wear the brass device waits on the ground.  You lock them together in a way that seems obvious now.  Once you make your cyclic device, you focus, and push it...  Not up. Not down.  Not left or right, or forward or backward.  You push it in a direction somehow at a right angle to reality, and your surroundings slide at right angles to every direction.  You then pull opposite to your first push, and confidently break the connection.
+</tw-passagedata><tw-passagedata pid="95" name="Bring the key to the roof" tags="" position="1300,600" size="100,100">[[you press R]]</tw-passagedata><tw-passagedata pid="96" name="you press R" tags="" position="1300,475" size="100,100">The doors open up and you walk out, heading straight to where the brass device waits on the ground.  You lock them together in a way that seems obvious now.  Once you make your cyclic device, you focus, and push it...  Not up. Not down.  Not left or right, or forward or backward.  You push it in a direction somehow at a right angle to reality, and your surroundings slide at right angles to every direction.  You then pull opposite to your first push, and confidently break the connection.
+
+You nod at each of the strangers before you, placing each one mentally in place of your newly made friends.
 
 [[Welcome to the future]]
-</tw-passagedata><tw-passagedata pid="97" name="Welcome to the future" tags="" position="2600,2200" size="100,100"></tw-passagedata></tw-storydata>
+</tw-passagedata><tw-passagedata pid="97" name="Welcome to the future" tags="" position="2400,2100" size="100,100">A young man steps toward you, giggling slightly, and presents himself as Will REDD, an echo here at the end of your friend William Redbrook.
+
+&quot;Are you ready to open what must be opened?&quot;
+
+[[I am ready.]]
+
+[[I... What?]]</tw-passagedata><tw-passagedata pid="98" name="I am ready." tags="" position="2600,2100" size="100,100">&quot;I know.  Just remember, opening can feel like breaking.&quot;
+
+REDD steps back and Drait NIKI introduces herself, terse but not unfriendly:
+
+&quot;Will you take responsibility for what you have to do?&quot;
+
+[[I will]]
+
+[[I... What?]]</tw-passagedata><tw-passagedata pid="99" name="I... What?" tags="" position="2375,2350" size="100,100">They shudder, and the world folds in half everywhere.  Your confusion</tw-passagedata><tw-passagedata pid="100" name="I will" tags="" position="2800,2100" size="100,100">NIKI steps back satisfied, and M.A.Sh.T steps forward, holding a small device.
+
+&quot;And will you remember all this when the world is crumpling, loud like tin, all around you?&quot;
+
+[[Of course]]
+
+[[Think it over before answering]]</tw-passagedata><tw-passagedata pid="101" name="Of course" tags="" position="2650,2325" size="100,100">Her eyes grow sad and she steps back.
+&quot;Confidence unearned is a hole in the universe.&quot;
+
+The device drops from her hands as you&#39;re taken by the
+
+[[Temporal Storm]]</tw-passagedata><tw-passagedata pid="102" name="Think it over before answering" tags="" position="2925,2225" size="100,100">She grins at your hesitation and offers you the small trinket in her hand.
+
+&quot;Introspection is important.  But, you&#39;re ready.  Take our strength and [[stop him.&quot;]]</tw-passagedata><tw-passagedata pid="103" name="stop him.&quot;" tags="" position="2925,2350" size="100,100">The end of everything is swallowed up, but you see each of your friends &quot;turn&quot; and feel a push from an unknown and unknowable direction.  You blink hard, fight disorientation, and face Dr. Brotin-Dawr, your old school chum.  He looks at you, and immediately drops all pretense.  Like an origami flower being undone, he unflexes in a handful of unseeable dimension, and becomes a writhing mass of tentacles and evil.
+
+And you fight the last battle anyone ever could.
+
+[[here if you win]]
+
+[[here if you lose]]</tw-passagedata><tw-passagedata pid="104" name="here if you win" tags="" position="2862.5,2475" size="100,100">You float, strong, so strong now, but unable to effect anything.  With no wall to push off of, with nothing to grab on to, you have no way of pulling yourself back into reality.  And so you float.  Your body wastes away.  The small eddies and vortices of time ripple through you as they find realignment, aging and delaying you to a suffering death.  But you saved everyone else.  You saved everyone and everything else.  Right?  Defeating the monster was enough, right?  One monster?  Was enough?
+
+You die, hoping, in agony.</tw-passagedata><tw-passagedata pid="105" name="here if you lose" tags="" position="2987.5,2475" size="100,100">It was never going to have been enough.  This is the direction the world was fated toward, always.
+
+Let that be a comfort as time sorts and arranges your molecules by size.</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
